--- a/application/admin/view/goods_cate/cate_index.html
+++ b/application/admin/view/goods_cate/cate_index.html
@@ -21,12 +21,13 @@
                 <tr>
                     <td>{$vo.id}</td>
                     <td class="text-left">&nbsp;{$vo.level-1|str_repeat='&nbsp;丨---',###}{$vo.title}</td>
-                    <td>{eq name='vo.status' value='1'}显示{else/}<font color="red">隐藏</font>{/eq}
-                    </td>
+                    <td>{eq name='vo.status' value='1'}显示{else/}<font color="red">隐藏</font>{/eq}</td>
                     <td>{$vo.sort}</td>
                     <td>
                         <button type="button" onclick="x_admin_show('添加分类',
                         'addChildCate.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-normal layui-btn-xs">+子类</button><!-- <button type="button" class="btn btn-primary">编辑</button> <button type="button" class="btn btn-danger" onClick="delcfm('{:url(\'admin/menu/del\',[\'id\' => $vo[\'id\']])}','{$vo.title}')">删除</button>-->
+                        <button type="button" onclick="x_admin_show('绑定品牌',
+                        'addBrands.html?id={$vo.id}',800,500)" class="layui-btn layui-btn-normal layui-btn-xs">品牌</button>
                         <button type="button" onclick="x_admin_show('编辑分类',
                                     'cateEdit.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-xs">编辑
                         </button>
