品牌-分类修改

--- a/application/admin/view/goods_cate/add_brands.html
+++ b/application/admin/view/goods_cate/add_brands.html
@@ -19,7 +19,7 @@
                 <div class="layui-input-block">
                     {foreach $brands as $key=>$v}
                     <input type="checkbox" name="brands[{$v.id}]" lay-skin="primary" title="{$v.name}"
-                        value="{$v.id}" />
+                        value="{$v.id}" <?php if(in_array($v['id'],$brand)){echo 'checked';} ?> />
                     {/foreach}
                 </div>
             </div>
