--- a/application/admin/view/goods_brand/index.html
+++ b/application/admin/view/goods_brand/index.html
@@ -21,7 +21,7 @@
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索品牌','search.html',800,480)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索品牌','search.html',600,280)">
                     <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
             </div>
@@ -48,8 +48,7 @@
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
                     , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'name', title: '品牌名称', width: '15%' }
-                    , { field: 'goods_cate', title: '所属分类' }
+                    , { field: 'name', title: '品牌名称' }
                     , {
                         field: 'area', title: '品牌logo', width: '15%',
                         templet: function (d) {
@@ -62,7 +61,7 @@
                     }
                     , { field: 'create_time', title: '创建时间', width: '15%', }
                     , {
-                        field: 'handle', title: '操作',width: '10%',
+                        field: 'handle', title: '操作',width: '15%',
                         templet: function (d) {
                             var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑品牌\',\'/admin/goods_brand/brandsEdit?id=' + d.id + '\',800,480);">编辑</button>' +
                                 '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
