--- a/application/admin/view/goods_cate/cate_index.html
+++ b/application/admin/view/goods_cate/cate_index.html
@@ -11,6 +11,7 @@
                 <tr>
                     <th>ID</th>
                     <th>分类名称</th>
+                    <th>绑定品牌</th>
                     <th>状态</th>
                     <th>排序</th>
                     <th>操作</th>
@@ -21,15 +22,18 @@
                 <tr>
                     <td>{$vo.id}</td>
                     <td class="text-left">&nbsp;{$vo.level-1|str_repeat='&nbsp;丨---',###}{$vo.title}</td>
+                    <td>{$vo.brands}</td>
                     <td>{eq name='vo.status' value='1'}显示{else/}<font color="red">隐藏</font>{/eq}</td>
                     <td>{$vo.sort}</td>
                     <td>
                         <button type="button" onclick="x_admin_show('添加分类',
-                        'addChildCate.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-normal layui-btn-xs">+子类</button><!-- <button type="button" class="btn btn-primary">编辑</button> <button type="button" class="btn btn-danger" onClick="delcfm('{:url(\'admin/menu/del\',[\'id\' => $vo[\'id\']])}','{$vo.title}')">删除</button>-->
+                        'addChildCate.html?id={$vo.id}',500,460)"
+                            class="layui-btn layui-btn-normal layui-btn-xs">子类</button>
                         <button type="button" onclick="x_admin_show('绑定品牌',
-                        'addBrands.html?id={$vo.id}',800,500)" class="layui-btn layui-btn-normal layui-btn-xs">品牌</button>
-                        <button type="button" onclick="x_admin_show('编辑分类',
-                                    'cateEdit.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-xs">编辑
+                        'addBrands.html?id={$vo.id}',800,500)"
+                            class="layui-btn layui-btn-warm layui-btn-xs">品牌</button>
+                        <button type="button" onclick="x_admin_show('编辑分类','cateEdit.html?id={$vo.id}',500,460)"
+                            class="layui-btn layui-btn-xs">编辑
                         </button>
                         <button type="button" onClick="deleteAuthRule({$vo.id})"
                             class="layui-btn layui-btn-xs layui-btn-danger">删除</button>
@@ -38,11 +42,6 @@
                 {/volist}
             </tbody>
         </table>
-        <div class="page">
-            <div>
-
-            </div>
-        </div>
     </div>
 </body>
 {include file="public/foot"}
@@ -56,17 +55,16 @@
                 type: 'post',
                 dataType: 'json',
                 data: { id: id },
+            }).done(function (data) {
+                console.log(data);
+                if (data.code == 0) {
+                    layer.msg(data.msg, { icon: 5, time: 500 });
+                } else {
+                    layer.msg(data.msg, { icon: 1, time: 500 }, function () {
+                        window.location.reload();
+                    })
+                }
             })
-                .done(function (data) {
-                    console.log(data);
-                    if (data.code == 0) {
-                        layer.msg(data.msg, { icon: 5, time: 500 });
-                    } else {
-                        layer.msg(data.msg, { icon: 1, time: 500 }, function () {
-                            window.location.reload();
-                        })
-                    }
-                })
         });
     }
 </script>
