--- a/application/admin/view/goods/goods_img.html
+++ b/application/admin/view/goods/goods_img.html
@@ -1,10 +1,13 @@
-{include file="public/head"}
-<style>
-    .logo-img{
-        width: 50px;
-    }
-</style>
+{include file='public/head'}
 <body>
+    <style media="screen" type="text/css">
+        header {
+            color: black;
+        }
+        .logo-img{
+            width: 50px;
+        }
+    </style>
     <div class="x-body">
         <table id="demo" lay-filter="test"></table>
         <script type="text/html" id="toolbarDemo">
@@ -12,22 +15,18 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加品牌','brandsAdd.html',800,500)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加品牌
+                {if $count < 5}
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加图片','imgAdd.html?goods_id={$id}',860,500)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加图片
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
-                    <i class="layui-icon layui-icon-refresh"></i>刷新
-                </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索品牌','search.html',600,280)">
-                    <i class="layui-icon layui-icon-search"></i>搜索
-                </button>
+                {/if}
             </div>
         </script>
     </div>
 </body>
-{include file="public/foot"}
-<script>
-    var tableIns;
+{include file='public/foot'}
+<script type="text/javascript">
+	var tableIns;
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
         /**
@@ -37,31 +36,26 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/goods_brand/index_ajax' //数据接口
+            , url: '/admin/goods/img_ajax?goods_id='+{$id} //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'name', title: '品牌名称' }
-                    , {
-                        field: 'area', title: '品牌logo', width: '15%',
-                        templet: function (d) {
-                            if (d.logo) {
-                                return '<img class="logo-img" src="'+d.logo+'" />';
-                            } else {
-                                return '暂无logo';
-                            }
+                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left' }
+                    , { field: 'img',title: '商品图片',
+                        templet: function(d){
+                            return '<img src="'+d.img+'" class="logo-img" />';
                         }
                     }
+                    , { field: 'title', title: '图片标题', width: '15%',edit: 'text' }
+                    , { field: 'sort', title: '排序', width: '10%',edit: 'text' }
                     , { field: 'create_time', title: '创建时间', width: '15%', }
                     , {
                         field: 'handle', title: '操作',width: '15%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑品牌\',\'/admin/goods_brand/brandsEdit?id=' + d.id + '\',800,480);">编辑</button>' +
-                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
                     }
@@ -84,6 +78,25 @@
                     break;
             };
         });
+        /**
+         * 监听单元格编辑
+        */
+        table.on('edit(test)',function(obj){
+            var params = obj.data;
+            $.post('/admin/goods/editImg', params, function(data){
+                var res = data.data;
+                if(data.code == 200){
+                    layer.msg('修改成功',{
+                        icon:1,
+                        time:1000
+                    },function(){
+                        location.reload();
+                    });
+                }else{
+                    layer.msg(data.msg);
+                }
+            },'json');
+        });
     });
     /**
      * 批量删除
@@ -94,7 +107,7 @@
         } else {
             argument = argument.toString();
             layer.confirm('确认要全部删除吗？', function (index) {
-                $.post('/admin/goods_brand/deleteBrands', { id: argument }, function (j) {
+                $.post('/admin/goods/deleteImg', { id: argument }, function (j) {
                     if (j.code == 200) {
                         layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                             location.reload();
@@ -111,7 +124,7 @@
     */
     function delUser(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/goods_brand/deleteBrands', { id: id }, function (j) {
+            $.post('/admin/goods/deleteImg', { id: id }, function (j) {
                 if (j.code == 200) {
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
@@ -123,5 +136,4 @@
         });
     }
 </script>
-
 </html>
