--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -12,13 +12,13 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加品牌','brandsAdd.html',800,500)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加品牌
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加商品','goodsAdd.html',820,500)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加商品
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索品牌','search.html',600,280)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索商品','search.html',820,280)">
                     <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
             </div>
@@ -37,7 +37,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/goods_brand/index_ajax' //数据接口
+            , url: '/admin/goods/index_ajax' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
@@ -45,23 +45,28 @@
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
                     , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'name', title: '品牌名称' }
-                    , {
-                        field: 'area', title: '品牌logo', width: '15%',
-                        templet: function (d) {
-                            if (d.logo) {
-                                return '<img class="logo-img" src="'+d.logo+'" />';
-                            } else {
-                                return '暂无logo';
+                    , { field: 'name', title: '商品名称' }
+                    , { field: 'thumb', title: '商品主图',width:'10%',
+                        templet:function(d){
+                            if(d.thumb){
+                                var img = '<img src="__public__'+d.thumb+'" class="logo-img" />';
+                            }else{
+                                var img = '暂无图片';
                             }
+                            return img;
                         }
                     }
+                    , { field: 'brand_name', title: '所属品牌', width: '10%'}
+                    , { field: 'cate_title', title: '所属分类' }
+                    , { field: 'title', title: '副标题', width: '10%'}
                     , { field: 'create_time', title: '创建时间', width: '15%', }
                     , {
-                        field: 'handle', title: '操作',width: '15%',
+                        field: 'handle', title: '操作',width: '20%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑品牌\',\'/admin/goods_brand/brandsEdit?id=' + d.id + '\',800,480);">编辑</button>' +
-                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-warm layui-btn-xs" onclick="x_admin_show(\'商品相册\',\'/admin/goods/goodsImg?id=' + d.id + '\',1000,500);">相册</button>'+
+                            '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品属性\',\'/admin/goods/goodsAttr?id=' + d.id + '\',1000,500);">属性</button>'+
+                            '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商品\',\'/admin/goods/goodsEdit?id=' + d.id + '\',800,480);">编辑</button>'+
+                            '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
                     }
@@ -94,7 +99,7 @@
         } else {
             argument = argument.toString();
             layer.confirm('确认要全部删除吗？', function (index) {
-                $.post('/admin/goods_brand/deleteBrands', { id: argument }, function (j) {
+                $.post('/admin/goods_brand/deleteGoods', { id: argument }, function (j) {
                     if (j.code == 200) {
                         layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                             location.reload();
@@ -111,7 +116,7 @@
     */
     function delUser(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/goods_brand/deleteBrands', { id: id }, function (j) {
+            $.post('/admin/goods_brand/deleteGoods', { id: id }, function (j) {
                 if (j.code == 200) {
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
