--- a/application/admin/view/goods/goods_add.html
+++ b/application/admin/view/goods/goods_add.html
@@ -99,6 +99,7 @@
 <script type="text/javascript" src="__static__/kindeditor/lang/zh-CN.js"></script>
 <script type="text/javascript">
     var cate_id = '';
+    var form = {};
     KindEditor.ready(function (K) {
         notice = K.create('#notice', {
             uploadJson: '/api/file/upload?type=article',
@@ -108,7 +109,8 @@
         });
     });
     layui.use(['form', 'layer', 'upload'], function () {
-        var form = layui.form,layer = layui.layer,upload = layui.upload;
+        form = layui.form;
+        var layer = layui.layer,upload = layui.upload;
         /**
         * 图片上传
         */
@@ -212,7 +214,6 @@
 		      cache:false,          
 		      async:false,          //同步返回
 		      success:function(data){
-		      	    console.log(data);
     		      	if(data.code==0){
     		      		layer.msg(data.msg);
     		      	}else{
