更新评论管理

--- a/application/admin/view/notice/index.html
+++ b/application/admin/view/notice/index.html
@@ -107,9 +107,9 @@
                 },'json');
         });
     }
-    function delUser(id) {
+    function delNotice(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/branch/deleteNotice', { branch_id: id }, function (j) {
+            $.post('/admin/notice/deleteNotice', { id: id }, function (j) {
                 if(j.code == 200){
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
