--- a/application/admin/view/shop/user_add.html
+++ b/application/admin/view/shop/user_add.html
@@ -44,10 +44,9 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/shop/user_ajax' //数据接口
+            , url: '/admin/shop/user_ajax?county='+county //数据接口
             , page: true //开启分页
             , limit: 10
-            , county:county
             , id: 'test'
             , cols: [
                 [ //表头
