--- a/application/admin/view/shop/goods_lis.html
+++ b/application/admin/view/shop/goods_lis.html
@@ -1,7 +1,17 @@
 {include file="public/head"}
 <style>
+    .avatar{
+        display: flex;
+        align-items: center;
+    }
     .logo-img{
-        width: 50px;
+        width: 60px;
+        height: 30px;
+        border: 1px solid #ccc;
+    }
+    .logo-img img{
+        width: 100%;
+        height: 100%;
     }
 </style>
 <body>
@@ -12,13 +22,13 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加商家','shopAdd.html',820,500)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加商家
+                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加商品','goodsAdd.html?shop_id={$shop_id}',820,500)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加商品
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索商家','search.html',800,500)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索商品','searchGoods.html?cate_id={$cate_id}',900,360)">
                     <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
             </div>
@@ -27,7 +37,7 @@
 </body>
 {include file="public/foot"}
 <script>
-    var tableIns;
+    var tableIns,shop_id = {$shop_id};
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
         /**
@@ -37,30 +47,32 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/shop/index_ajax' //数据接口
+            , url: '/admin/shop/goods_ajax?shop_id='+shop_id //数据接口
             , page: true //开启分页
-            , limit: 20
+            , limit: 10
             , id: 'test'
             , cols: [
                 [ //表头
-                    { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'name', title: '商家名称', width: '15%' }
-                    , { field: 'cate_title', title: '所属分类', width: '15%' }
-                    , { field: 'citys', title: '所属城市', width: '15%',
+                    { type: 'checkbox',fixed: 'left',width:'5%' }
+                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left' }
+                    , { field: 'name', title: '商品名称', width: '20%'}
+                    , { field: 'thumb', title: '商品主图', width: '10%',
                         templet:function(d){
-                            return d.province_name+'-'+d.city_name+'-'+d.county_name;
+                            if(d.thumb){
+                                var img = '<img src="__public__'+d.thumb+'" class="logo-img" />';
+                            }else{
+                                var img = '暂无图片';
+                            }
+                            return img;
                         }
                     }
-                    , { field: 'realname', title: '所属用户', width: '10%'}
-                    , { field: 'mobile', title: '联系电话', width: '10%'}
-                    , { field: 'create_time', title: '创建时间', width: '15%', }
+                    , { field: 'cate_title', title: '所属分类', width: '20%'}
+                    , { field: 'brand_name', title: '所属品牌', width: '15%'}
                     , {
                         field: 'handle', title: '操作',width: '20%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家商品\',\'/admin/shop/goodsLis?id=' + d.id + '\',1000,500);">商品</button>'+
-                            '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'绑定\/解绑用户\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500);">用户</button>'+
-                            '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480);">编辑</button>'+
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品属性\',\'/admin/shop/goodsAttr?id=' + d.id + '\',1000,500);">属性</button>'+
+                            '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商品\',\'/admin/shop/goodsEdit?id=' + d.id + '\',800,480);">编辑</button>'+
                             '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
@@ -94,7 +106,7 @@
         } else {
             argument = argument.toString();
             layer.confirm('确认要全部删除吗？', function (index) {
-                $.post('/admin/shop/deleteShop', { id: argument }, function (j) {
+                $.post('/admin/shop/deleteGoods', { id: argument }, function (j) {
                     if (j.code == 200) {
                         layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                             location.reload();
@@ -109,9 +121,9 @@
     /**
      * 单个删除
     */
-    function delUser(id) {
+    function delGoods(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/shop/deleteShop', { id: id }, function (j) {
+            $.post('/admin/shop/deleteGoods', { id: id }, function (j) {
                 if (j.code == 200) {
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
