--- a/application/admin/view/shop/search_goods.html
+++ b/application/admin/view/shop/search_goods.html
@@ -21,10 +21,10 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">所属分类</label>
                 <div class="layui-input-inline select select1">
-                    <select lay-filter="cate" name="cate_id[]" data-id="1">
+                    <select lay-filter="cate" name="cate_id[]" data-id="1" disabled>
                         <option value="">请选择</option>
                         {volist name='cate' id='vo'}
-                            <option value="{$vo.id}">{$vo.title}</option>
+                            <option value="{$vo.id}" {if condition="$vo.id == $cate_id"}selected{/if}>{$vo.title}</option>
                          {/volist}
                     </select>
                 </div>
@@ -48,7 +48,8 @@
 </body>
 {include file='public/foot'}
 <script type="text/javascript">
-    var form = {},cate_id = '';
+    var form = {},cate_id = {$cate_id};
+    getChildrenCate(cate_id,1);
     layui.use(['form', 'layer'], function () {
         form = layui.form;
         var layer = layui.layer;
@@ -63,7 +64,7 @@
                 parent.tableIns.reload({
                     where: { //设定异步数据接口的额外参数，任意设
                         cate_id: cate_id,
-                        brands_id: data.field.brand_id
+                        brand_id: data.field.brand_id
                     }
                     , page: {
                         curr: 1 //重新从第 1 页开始
@@ -87,33 +88,8 @@
                 return false;
             }
             cate_id = data.value;
-            getBrands(data.value);
-            $.post('/api/goods_cate/index', {
-                pid: data.value,
-                type: 2,
-            }, function (data) {
-                var res = data.data;
-                if (data.code == 200) {
-                    if (res.length > 0) {
-                        var ids = parseInt(id) + 1;
-                        var html_t = '<div class="layui-input-inline select select'+ids+'">'+
-                                        '<select lay-filter="cate" name="cate_id[]" data-id="'+ids+'">';
-                        var option = '<option value="">请选择</option>';
-                        res.forEach(function (v, i) {
-                            option += '<option value="' + v.id + '">' + v.title + '</option>';
-                        });
-                        var html = html_t + option + '</select></div>';
-                        var select = $('div').find('.select');
-                        select.each(function(i,v){
-                            if(i+1 > id){
-                                $(v).remove();
-                            }
-                        });
-                        $('.select' + id).after(html);
-                        form.render('select');
-                    }
-                }
-            }, 'json');
+            getBrands(cate_id);
+            getChildrenCate(cate_id,id);
         });
     });  
     $("#reset").on("click",function(){ window.location.reload();});
@@ -139,6 +115,37 @@
                 form.render('select');
             }, 'json');
         }
+    }
+    /**
+     * 获取子分类
+    */
+    function getChildrenCate(pid,id){
+        $.post('/api/goods_cate/index', {
+            pid: pid,
+            type: 2,
+        }, function (data) {
+            var res = data.data;
+            if (data.code == 200) {
+                if (res.length > 0) {
+                    var ids = parseInt(id) + 1;
+                    var html_t = '<div class="layui-input-inline select select'+ids+'">'+
+                                    '<select lay-filter="cate" name="cate_id[]" data-id="'+ids+'">';
+                    var option = '<option value="">请选择</option>';
+                    res.forEach(function (v, i) {
+                        option += '<option value="' + v.id + '">' + v.title + '</option>';
+                    });
+                    var html = html_t + option + '</select></div>';
+                    var select = $('div').find('.select');
+                    select.each(function(i,v){
+                        if(i+1 > id){
+                            $(v).remove();
+                        }
+                    });
+                    $('.select' + id).after(html);
+                    form.render('select');
+                }
+            }
+        }, 'json');
     }
 </script>
 
