--- a/application/admin/view/auth/index.html
+++ b/application/admin/view/auth/index.html
@@ -34,7 +34,8 @@
                                 <td>{eq name='vo.status' value='1'}显示{else/}<font color="red">隐藏</font>{/eq}
                                 </td>
                                 <td>{$vo.sort}</td>
-                                <td> <!--<button type="button" class="btn btn-success">添加子菜单</button> <button type="button" class="btn btn-primary">编辑</button> <button type="button" class="btn btn-danger" onClick="delcfm('{:url(\'admin/menu/del\',[\'id\' => $vo[\'id\']])}','{$vo.title}')">删除</button>-->
+                                <td><button type="button" onclick="x_admin_show('添加子菜单','addChild.html?id={$vo.id}',500,460)"
+                                        class="layui-btn layui-btn-normal layui-btn-xs">子菜单</button>
                                     <button type="button" onclick="x_admin_show('编辑菜单',
                                     'showEdit.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-xs">编辑
                                     </button>
