--- a/application/admin/view/goods_cate/cate_child.html
+++ b/application/admin/view/goods_cate/cate_child.html
@@ -13,7 +13,7 @@
                     上级分类
                 </label>
                 <div class="layui-input-block">
-                    <select lay-filter="aihao" name="pid" id='pid' disabled="disabled">
+                    <select lay-filter="aihao" id='pid' disabled="disabled">
                         <option value="">{$p_title}</option>
                     </select>
                 </div>
