--- a/application/admin/view/article/index.html
+++ b/application/admin/view/article/index.html
@@ -36,7 +36,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/article/index_ajax' //数据接口
+            , url: '/admin/article/index' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
