--- a/application/admin/view/goods/goods_attr.html
+++ b/application/admin/view/goods/goods_attr.html
@@ -34,7 +34,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/goods/attr_ajax?goods_id='+{$id} //数据接口
+            , url: '/admin/goods/goodsAttr?goods_id='+{$id} //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
