--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -37,7 +37,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/goods/index_ajax' //数据接口
+            , url: '/admin/goods/index' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
