--- a/application/admin/view/goods_brand/brands_edit.html
+++ b/application/admin/view/goods_brand/brands_edit.html
@@ -22,7 +22,7 @@
         }
     </style>
     <div class="x-body">
-        <form action="editBrands" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
+        <form action="" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
             <div class="layui-form-item">
                 <label class="layui-form-label">品牌名称</label>
                 <div class="layui-input-block">
