--- a/application/admin/view/goods_cate/cate_add.html
+++ b/application/admin/view/goods_cate/cate_add.html
@@ -6,8 +6,7 @@
 }
     </style>
     <div class="x-body">
-        <form action="addCate" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
-            
+        <form action="" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
             <div class="layui-form-item">
                 <label class="layui-form-label">
                     上级分类
