--- a/application/admin/view/goods_cate/cate_child.html
+++ b/application/admin/view/goods_cate/cate_child.html
@@ -6,7 +6,7 @@
         }
     </style>
     <div class="x-body">
-        <form action="addCateChild" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
+        <form action="" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
             <input type="hidden" name='pid' value="{$pid}">
             <div class="layui-form-item">
                 <label class="layui-form-label">
