--- a/application/admin/view/article/cate_edit.html
+++ b/application/admin/view/article/cate_edit.html
@@ -6,7 +6,7 @@
         }
     </style>
     <div class="x-body">
-        <form action="editCate" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
+        <form action="" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
             <input type="hidden" name='id' value="{$data.id}">
             <div class="layui-form-item">
                 <label class="layui-form-label">
