--- a/application/admin/view/goods/goods_img.html
+++ b/application/admin/view/goods/goods_img.html
@@ -36,7 +36,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/goods/img_ajax?goods_id='+{$id} //数据接口
+            , url: '/admin/goods/goodsImg?goods_id='+{$id} //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
@@ -83,7 +83,7 @@
         */
         table.on('edit(test)',function(obj){
             var params = obj.data;
-            $.post('/admin/goods/editImg', params, function(data){
+            $.post('/admin/goods/imgEdit', params, function(data){
                 var res = data.data;
                 if(data.code == 200){
                     layer.msg('修改成功',{
