--- a/application/admin/view/goods_cate/add_brands.html
+++ b/application/admin/view/goods_cate/add_brands.html
@@ -7,7 +7,7 @@
         }
     </style>
     <div class="x-body">
-        <form action="brandsAdd" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
+        <form action="" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
             <div class="layui-form-item">
                 <label class="layui-form-label">当前分类：</label>
                 <div class="layui-input-block">
